test/error/throw_on_class.morpho
// Calling throw on the class

Error.throw("FooFoo", "Can't foo foos.")
// expect: Error 'FooFoo': Can't foo foos.
